Qt: Work around QTBUG-122109 when applying packet list style sheet

https://bugreports.qt.io/browse/QTBUG-122109

A bug introduced by the fix for https://bugreports.qt.io/browse/QTBUG-116013
causes all visible sections to reset to the default section size whenever a
style sheet is applied (even if defaultSectionSize didn't change.)

Make sure that before applying a style sheet we prevent our recent
column widths from being updated, and then restore column widths
from the recent values afterwards.

This affects versions 6.5.4 (commercial only, 6.5.3 is the last free
release) and 6.6.1 and 6.6.2.


(cherry picked from commit ea38f142e89f81181fe397da0875a7df05787162)